--- a/src/index.html
+++ b/src/index.html
@@ -40,47 +40,9 @@
     </div>
   </nav>
   <section class="margins">
-    <div class="cover centered border">
-      <h1 class="font-color header hidden">COMING SOON</h1>
+    <div class= "top-image">
+      <h1>Boutique bookstore featuring a curated selection of contemporary titles.</h1>
     </div>
-    <div class="cover centered border">
-      <h1 class="font-color header hidden">COMING SOON</h1>
-    </div>
-    <div class="cover centered border">
-      <h1 class="font-color header hidden">COMING SOON</h1>
-    </div>
-    <div class="cover centered border">
-      <h1 class="font-color header hidden">COMING SOON</h1>
-    </div>
-    <footer >
-      <div class="footer-box hidden">
-        <h3>foot</h3>
-        <ul>
-          <li>footer</li>
-          <li>footer</li>
-          <li>footer</li>
-          <li>footer</li>
-        </ul>
-      </div>
-      <div class="footer-box hidden">
-        <h3>foot</h3>
-        <ul>
-          <li>footer</li>
-          <li>footer</li>
-          <li>footer</li>
-          <li>footer</li>
-        </ul>
-      </div>
-      <div class="footer-box hidden">
-        <h3>foot</h3>
-        <ul>
-          <li>footer</li>
-          <li>footer</li>
-          <li>footer</li>
-          <li>footer</li>
-        </ul>
-      </div>
-    </footer>
   </section>
 </body>
 </html>
